--- a/package.json
+++ b/package.json
@@ -19,9 +19,15 @@
   "homepage": "https://github.com/MSanouvo/express-app-template#readme",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.8.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "pg": "^8.14.1"
+    "express-session": "^1.18.1",
+    "pg": "^8.14.1",
+    "prisma": "^6.8.2",
+    "supabase": "^2.23.4",
+    "supertest": "^7.1.1"
   }
 }
